--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         </div>
     </nav>
 
-    <!-- Masthead-->
+    <!-- header-->
     <header class="masthead" id="main">
         <div class="container">
             <div class="masthead-subheading">TEZLIKLƏ</div>
