--- a/index.html
+++ b/index.html
@@ -44,34 +44,34 @@
     </div>
 
     <!-- ======= Main Navbar ======= -->
-  <nav class="navbar navbar-expand-lg sticky-top" id="mainNav">
-  <div class="container">
-    <a class="navbar-brand" href="#page-top">
-      <img src="assets/img/logos/logo_narmishfood.png" alt="Logo" />
-    </a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive">
-      <i class="fas fa-bars ms-1"></i>
-    </button>
-    <div class="navbar-divider"></div>
-    <div class="collapse navbar-collapse" id="navbarResponsive">
-        <div class="nav-wrapper">
-       <ul class="navbar-nav text-uppercase ms-auto py-4 py-lg-0">
-        <li class="nav-item"><a class="nav-link" href="#main">Əsas Səhifə</a></li>
-        <li class="nav-item"><a class="nav-link" href="#about">Haqqımda</a></li>
-        <li class="nav-item"><a class="nav-link" href="#service">Üstünlük</a></li>
-        <li class="nav-item"><a class="nav-link" href="#menu">Menu</a></li>
-        <li class="nav-item"><a class="nav-link" href="#gym">Məşq</a></li>
-        <li class="nav-item"><a class="nav-link" href="#contact">Əlaqə</a></li>
-      </ul>
-      </div>
-    </div>
-  </div>
-</nav>
+    <nav class="navbar navbar-expand-lg sticky-top" id="mainNav">
+        <div class="container">
+            <a class="navbar-brand" href="#page-top">
+                <img src="assets/img/logos/logo_narmishfood.png" alt="Logo" />
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive">
+                <i class="fas fa-bars ms-1"></i>
+            </button>
+            <div class="navbar-divider"></div>
+            <div class="collapse navbar-collapse" id="navbarResponsive">
+                <div class="nav-wrapper">
+                    <ul class="navbar-nav text-uppercase ms-auto py-4 py-lg-0">
+                        <li class="nav-item"><a class="nav-link" href="#main">Əsas Səhifə</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#about">Haqqımda</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#service">Üstünlük</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#menu">Menu</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#gym">Məşq</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#contact">Əlaqə</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </nav>
 
 
     <!-- header-->
     <header class="masthead" id="main">
-        <div class="container">
+        <div class="container-fluid text-center">
             <div class="masthead-subheading">TEZLIKLƏ</div>
             <div class="masthead-heading text-uppercase">Narmishfood</div>
         </div>
