--- a/index.html
+++ b/index.html
@@ -11,21 +11,14 @@
     <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
     <!-- Font Awesome icons (free version)-->
     <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
-    <!-- Google fonts-->
+   <!-- Google fonts-->
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
     <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700" rel="stylesheet" type="text/css" />
-    <!-- AOS CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet">
-
-    <!-- Bootstrap Icons CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
     <!-- Core theme CSS (includes Bootstrap)-->
     <link href="assets/css/styles.css" rel="stylesheet" />
 </head>
 
 <body id="page-top">
-
     <!-- ======= Top Bar ======= -->
     <div class="topbar d-flex align-items-center fixed-top">
         <div class="container d-flex justify-content-center justify-content-md-between">
@@ -45,42 +38,41 @@
             </div>
         </div>
     </div>
-
-    <!-- ======= Main Navbar ======= -->
- <nav class="navbar navbar-expand-lg sticky-top" id="mainNav">
-    <div class="container">
-        <a class="navbar-brand" href="#page-top">
-            <img src="assets/img/logos/logo_narmishfood.png" alt="Logo" />
-        </a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive">
-        MENU    <i class="fas fa-bars ms-1"></i>
-        </button>
-        <div class="navbar-divider"></div>
-
-        <div class="collapse navbar-collapse" id="navbarResponsive">
-            <div class="nav-wrapper">
+    <!-- Navigation-->
+    <nav class="navbar navbar-expand-lg navbar-dark sticky-top" id="mainNav">
+        <div class="container">
+            <a class="navbar-brand" href="#page-top"><img src="assets/img/logos/logo_narmishfood.png" alt="..." /></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive"
+                aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+                Menu
+                <i class="fas fa-bars ms-1"></i>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav text-uppercase ms-auto py-4 py-lg-0">
                     <li class="nav-item" data-aos="fade-down"><a class="nav-link" href="#main">Əsas Səhifə</a></li>
-                    <li class="nav-item" data-aos="fade-down" data-aos-delay="100"><a class="nav-link" href="#about">Haqqımda</a></li>
-                    <li class="nav-item" data-aos="fade-down" data-aos-delay="200"><a class="nav-link" href="#service">Üstünlük</a></li>
-                    <li class="nav-item" data-aos="fade-down" data-aos-delay="300"><a class="nav-link" href="#menu">Menu</a></li>
-                    <li class="nav-item" data-aos="fade-down" data-aos-delay="400"><a class="nav-link" href="#gym">Məşq</a></li>
-                    <li class="nav-item" data-aos="fade-down" data-aos-delay="500"><a class="nav-link" href="#contact">Əlaqə</a></li>
+                    <li class="nav-item" data-aos="fade-down" data-aos-delay="100"><a class="nav-link"
+                            href="#about">Haqqımda</a></li>
+                    <li class="nav-item" data-aos="fade-down" data-aos-delay="200"><a class="nav-link"
+                            href="#service">Üstünlük</a></li>
+                    <li class="nav-item" data-aos="fade-down" data-aos-delay="300"><a class="nav-link"
+                            href="#menu">Menu</a></li>
+                    <li class="nav-item" data-aos="fade-down" data-aos-delay="400"><a class="nav-link"
+                            href="#gym">Məşq</a></li>
+                    <li class="nav-item" data-aos="fade-down" data-aos-delay="500"><a class="nav-link"
+                            href="#contact">Əlaqə</a></li>
                 </ul>
             </div>
         </div>
-    </div>
-</nav>
-
-
-
-    <!-- header-->
-    <header class="masthead" id="main">
-        <div class="container-fluid text-center">
-            <div class="masthead-subheading">TEZLIKLƏ</div>
-            <div class="masthead-heading text-uppercase" data-aos="fade-up">Narmishfood</div>
+    </nav>
+    <!-- Masthead-->
+    <header class="masthead">
+    <div class="container-fluid px-3 text-center">
+        <div class="masthead-subheading">TEZLIKLƏ</div>
+        <div class="masthead-heading text-uppercase" data-aos="fade-up">
+            Narmishfood
         </div>
-    </header>
+    </div>
+</header>
     <!-- About-->
     <section class="page-section" id="about">
         <div class="container">
