--- a/index.html
+++ b/index.html
@@ -15,8 +15,10 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
     <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700" rel="stylesheet" type="text/css" />
     <!-- Core theme CSS (includes Bootstrap)-->
+     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
      <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link href="assets/css/styles.css" rel="stylesheet" />
+    <link rel="manifest" href="assets/js/manifest.json">
 </head>
 
 <body id="page-top">
@@ -34,7 +36,7 @@
 
             <div class="languages d-none d-md-flex align-items-center">
                 <ul class="list-unstyled d-flex mb-0">
-                    <li class="me-2"><a href="#">Panelə Giriş <i class="bi bi-arrow-right"></i> </a></li>
+                    <li class="me-2"><a href="adminPanel/login.html">Panelə Giriş <i class="bi bi-arrow-right"></i> </a></li>
                 </ul>
             </div>
         </div>
@@ -61,6 +63,7 @@
                             href="#gym">Məşq</a></li>
                     <li class="nav-item" data-aos="fade-down" data-aos-delay="500"><a class="nav-link"
                             href="#contact">Əlaqə</a></li>
+                            
                 </ul>
             </div>
         </div>
