add about section

--- a/adminPanel/login.html
+++ b/adminPanel/login.html
@@ -40,13 +40,12 @@
                                         </div>
 
                                         <div class="d-grid">
-                                            <button class="btn btn-primary btn-lg rounded-pill" type="submit">
+                                            <button class="btn btn-success btn-lg rounded-pill" type="submit">
                                                 Daxil ol
                                             </button>
                                         </div>
                                     </form>
                                 </div>
-
                             </div>
                         </div>
                     </div>
