--- a/pages/details.html
+++ b/pages/details.html
@@ -208,7 +208,7 @@
                 <!-- Logo & About -->
                 <div class="col-md-4 mb-3 border-end border-secondary pe-3">
                     <!-- Logo -->
-                    <img src="assets/img/logos/logo_narmishfood.png" alt="Narmishfood Logo" class="mb-2"
+                    <img src="../assets/img/logos/logo_narmishfood.png" alt="Narmishfood Logo" class="mb-2"
                         style="height:40px;">
                     <p class="small mb-2">Sağlam həyat tərzi və fitness üzrə blogger və məşqçi.</p>
                     <div class="d-flex gap-2">
