--- a/index.html
+++ b/index.html
@@ -69,13 +69,14 @@
         </div>
     </nav>
     <!-- Masthead-->
-    <header class="masthead">
-            <div class="container">
-                <div class="masthead-subheading">Welcome To Our Studio!</div>
-                <div class="masthead-heading text-uppercase">It's Nice To Meet You</div>
-                <a class="btn btn-primary btn-xl text-uppercase" href="#services">Tell Me More</a>
+    <header class="masthead" id="main">
+        <div class="container-fluid px-3 text-center">
+            <div class="masthead-subheading" data-aos="fade-up" data-aos-duration="400">TEZLIKLƏ</div>
+            <div class="masthead-heading text-uppercase" data-aos="fade-up" data-aos-duration="450">
+                Narmishfood
             </div>
-        </header>
+        </div>
+    </header>
     <!-- About-->
     <section class="page-section" id="about">
         <div class="container my-5">
