--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="loader"></div>
     </div>
     <!-- ======= Top Bar ======= -->
-    <div class="topbar d-flex align-items-center fixed-top">
+    <div class="topbar d-none d-md-flex align-items-center fixed-top">
         <div class="container d-flex justify-content-center justify-content-md-between">
             <div class="contact-info d-flex align-items-center">
                 <i class="bi bi-envelope d-flex align-items-center">
