--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="loader"></div>
     </div>
     <!-- ======= Top Bar ======= -->
-    <div class="topbar d-none d-md-flex align-items-center fixed-top">
+    <div class="topbar d-md-flex align-items-center fixed-top">
         <div class="container d-flex justify-content-center justify-content-md-between">
             <div class="contact-info d-flex align-items-center">
                 <i class="bi bi-envelope d-flex align-items-center">
@@ -82,7 +82,7 @@
         <div class="container my-5">
             <div class="row justify-content-center">
                 <!-- Main Content -->
-                <div class="col-12 col-lg-8" >
+                <div class="col-12 col-lg-8">
                     <!-- Single Post -->
                     <div class="single-post mb-5">
                         <div class="post-thumb mb-3">
@@ -455,6 +455,18 @@
                         </div>
                     </div>
 
+                    <!-- Controls -->
+                    <button class="carousel-control-prev" type="button" data-bs-target="#testimonialCarousel"
+                        data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon"></span>
+                        <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#testimonialCarousel"
+                        data-bs-slide="next">
+                        <span class="carousel-control-next-icon"></span>
+                        <span class="visually-hidden">Next</span>
+                    </button>
+
                 </div>
             </div>
 
@@ -617,7 +629,6 @@
     <script src="assets/js/scripts.js"></script>
     <script src="assets/js/food.js"></script>
     <script src="assets/js/smooth.js"></script>
-
 </body>
 
 </html>
