add aos to menu

--- a/index.html
+++ b/index.html
@@ -478,7 +478,7 @@
             <h2 class="text-center mb-5 section-title"> <i class="bi bi-journal-check me-2"></i>Programlar</h2>
             <div class="row g-4 justify-content-center">
 
-                <div class="col-12 col-md-6 col-lg-4">
+                <div class="col-12 col-md-6 col-lg-4" data-aos="fade-right" data-aos-delay="100">
                     <div class="menu-card shadow-sm rounded overflow-hidden">
                         <div class="menu-img-wrapper">
                             <img src="assets/img/header/bg-1.jpg" alt="İF Menu">
@@ -494,7 +494,7 @@
                     </div>
                 </div>
 
-                <div class="col-12 col-md-6 col-lg-4">
+                <div class="col-12 col-md-6 col-lg-4" data-aos="fade-right" data-aos-delay="200">
                     <div class="menu-card shadow-sm rounded overflow-hidden">
                         <div class="menu-img-wrapper">
                             <img src="assets/img/header/bg-3.jpg" alt="N Fit Menu">
@@ -509,7 +509,7 @@
                     </div>
                 </div>
 
-                <div class="col-12 col-md-6 col-lg-4">
+                <div class="col-12 col-md-6 col-lg-4" data-aos="fade-right" data-aos-delay="300">
                     <div class="menu-card shadow-sm rounded overflow-hidden">
                         <div class="menu-img-wrapper">
                             <img src="assets/img/header/bg-4.jpg" alt="Fərdi Menu">
