add aos to sidebar

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     <header class="masthead" id="main">
         <div class="container-fluid px-3 text-center">
             <div class="masthead-subheading" data-aos="fade-up" data-aos-duration="400">TEZLIKLƏ</div>
-            <div class="masthead-heading text-uppercase" data-aos="fade-up" data-aos-duration="450">
+            <div class="masthead-heading text-uppercase" data-aos="fade-up" data-aos-duration="550">
                 Narmishfood
             </div>
         </div>
@@ -260,7 +260,7 @@
                             </div>
                         </div>
                         <!-- Ad Widget -->
-                        <div class="single-widget-area add-widget text-center mb-4 p-3 border rounded shadow-sm">
+                        <div class="single-widget-area add-widget text-center mb-4 p-3 border rounded shadow-sm" data-aos="zoom-in-down" data-aos-delay="100">
                             <a href="https://www.instagram.com/p/DRorw3JjEz4/" target="_blank">
                                 <video class="img-fluid rounded mb-2" autoplay muted loop playsinline
                                     style="width:100%; max-height:250px; object-fit:cover;">
@@ -275,7 +275,7 @@
                                 class="btn btn-success btn-sm">Qeydiyyat</a>
                         </div>
                         <!-- Newsletter Widget -->
-                        <div class="single-widget-area newsletter-widget text-center p-3 border rounded shadow-sm">
+                        <div class="single-widget-area newsletter-widget text-center p-3 border rounded shadow-sm" data-aos="zoom-out-up" data-aos-delay="100">
                             <h6 class="widget-title mb-3">Xəbər Bülleteni (TEZLIKLƏ)</h6>
                             <p class="small text-muted">Xəbər bülletenimə abunə olun və hər zaman yeniliklərdən xəbərdar
                                 olun!</p>
