--- a/index.html
+++ b/index.html
@@ -1,12 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <meta name="description" content="" />
-    <meta name="author" content="" />
-    <title>Narmishfood.az</title>
+    <meta name="description"
+        content="Sağlam qidalanma, fitness və gym üçün dietik yeməklər, proteinli menyular, online menu satışı və faydalı bloq yazıları. Narmishfood ilə sağlam yaşa.">
+    <meta name="author" content="Narmishfood – Healthy Food & Fitness Menu">
+    <meta name="robots" content="index, follow">
+    <meta name="keywords"
+        content="sağlam qida, fitness yeməkləri, gym dietası, proteinli menyu, online yemək sifarişi, dietik qidalar">
+    <link rel="canonical" href="https://narmishfood.az/blog">
+    <meta property="og:title" content="Sağlam Qidalanma & Fitness | Narmishfood Blog">
+    <meta property="og:description"
+        content="Fitness və gym üçün sağlam yeməklər, dietik menyular və online sifariş. Narmishfood blogu.">
+    <meta property="og:image" content="https://narmishfood.az/assets/img/blog-cover.jpg">
+    <meta property="og:url" content="https://narmishfood.az/blog">
+    <meta property="og:type" content="article">
+
+    <title>Sağlam Qidalanma, Fitness & Online Menu | Narmishfood.az</title>
     <!-- Favicon-->
     <link rel="icon" type="image/x-icon" href="assets/img/logos/favicon.ico" />
     <!-- Font Awesome icons (free version)-->
@@ -260,7 +271,8 @@
                             </div>
                         </div>
                         <!-- Ad Widget -->
-                        <div class="single-widget-area add-widget text-center mb-4 p-3 border rounded shadow-sm" data-aos="zoom-in-down" data-aos-delay="100">
+                        <div class="single-widget-area add-widget text-center mb-4 p-3 border rounded shadow-sm"
+                            data-aos="zoom-in-down" data-aos-delay="100">
                             <a href="https://www.instagram.com/p/DRorw3JjEz4/" target="_blank">
                                 <video class="img-fluid rounded mb-2" autoplay muted loop playsinline
                                     style="width:100%; max-height:250px; object-fit:cover;">
@@ -275,7 +287,8 @@
                                 class="btn btn-success btn-sm">Qeydiyyat</a>
                         </div>
                         <!-- Newsletter Widget -->
-                        <div class="single-widget-area newsletter-widget text-center p-3 border rounded shadow-sm" data-aos="zoom-out-up" data-aos-delay="100">
+                        <div class="single-widget-area newsletter-widget text-center p-3 border rounded shadow-sm"
+                            data-aos="zoom-out-up" data-aos-delay="100">
                             <h6 class="widget-title mb-3">Xəbər Bülleteni (TEZLIKLƏ)</h6>
                             <p class="small text-muted">Xəbər bülletenimə abunə olun və hər zaman yeniliklərdən xəbərdar
                                 olun!</p>
