--- a/adminPanel/crud/delete.html
+++ b/adminPanel/crud/delete.html
@@ -5,24 +5,32 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <title>Narmishfood-Admin</title>
+    <title>Narmishfood Admin</title>
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.3.3/css/bootstrap.min.css">
+
+    <!-- DataTables CSS for Bootstrap 5 -->
+    <link rel="stylesheet" href="https://cdn.datatables.net/1.13.6/css/dataTables.bootstrap5.min.css">
+
+    <!-- Optional: Simple-DataTables CSS -->
     <link href="https://cdn.jsdelivr.net/npm/simple-datatables@7.1.2/dist/style.min.css" rel="stylesheet" />
-    <link href="assets/css/styles.css" rel="stylesheet" />
+
+    <!-- FontAwesome Icons -->
     <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
-    <link rel="icon" type="image/x-icon" href="assets/img/logos/favicon.ico" />
-    <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
-    <!-- Google fonts-->
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
-    <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700" rel="stylesheet" type="text/css" />
-    <!-- Core theme CSS (includes Bootstrap)-->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
+
+    <!-- Custom Styles -->
+    <link href="../assets/css/styles.css" rel="stylesheet" />
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/x-icon" href="../assets/img/logos/favicon.ico" />
 </head>
 
 <body class="sb-nav-fixed">
     <!-- navbar   -->
     <nav class="sb-topnav navbar navbar-expand navbar-dark bg-dark">
         <!-- Navbar Brand-->
-        <a class="navbar-brand ps-3" href="index.html">Narmishfood</a>
+        <a class="navbar-brand ps-3" href="../index.html">Narmishfood</a>
         <!-- Sidebar Toggle-->
         <button class="btn btn-link btn-sm order-1 order-lg-0 me-4 me-lg-0" id="sidebarToggle" href="#!"><i
                 class="fas fa-bars"></i></button>
@@ -69,15 +77,11 @@
                             Əsas Səhifə
                         </a>
                         <div class="sb-sidenav-menu-heading">Əməliyyatlar</div>
-                        <a class="nav-link" href="users.html">
+                        <a class="nav-link" href="charts.html">
                             <div class="sb-nav-link-icon"><i class="fas fa-user"></i></div>
                             İstifadəçilər
                         </a>
-                         <a class="nav-link" href="about.html">
-                            <div class="sb-nav-link-icon"><i class="fas fa-user"></i></div>
-                            Haqqımda
-                        </a>
-                        <a class="nav-link" href="menu.html">
+                        <a class="nav-link" href="charts.html">
                             <div class="sb-nav-link-icon"><i class="fas fa-envelope"></i></div>
                             Menu
                         </a>
@@ -89,26 +93,39 @@
                 </div>
             </nav>
         </div>
-         <!-- dashboard -->
+        <!-- dashboard -->
         <div id="layoutSidenav_content">
-            <main>
-                <div class="container-fluid px-4">
-                    <h1 class="mt-4">Narmishfood</h1>
-                    <ol class="breadcrumb mb-4">
-                        <li class="breadcrumb-item active">Əsas səhifə</li>
-                    </ol>
-                    <div class="row">
-                        <div class="col-xl-3 col-md-6">
-                            <div class="card bg-danger text-white mb-4">
-                                <div class="card-body">Danger Card</div>
-                                <div class="card-footer d-flex align-items-center justify-content-between">
-                                    <a class="small text-white stretched-link" href="#">View Details</a>
-                                    <div class="small text-white"><i class="fas fa-angle-right"></i></div>
-                                </div>
-                            </div>
+
+            <main id="deactivate-form">
+                <div class="container">
+                    <div class="card shadow-lg mt-5 mx-auto p-4 bg-dark">
+                        <h2 class="text-center mb-4 text-white">İstifadəçini Deaktiv Et</h2>
+
+                        <p class="text-center text-white">
+                            Siz bu istifadəçinin statusunu <strong>Inactive</strong> edirsiniz. Bu əməliyyat geri
+                            alınabilir.
+                        </p>
+
+                        <!-- User Info -->
+                        <ul class="list-group mb-4">
+                            <li class="list-group-item bg-secondary text-white">Ad: <strong>Firuza</strong></li>
+                            <li class="list-group-item bg-secondary text-white">Soyad: <strong>Poladzade</strong></li>
+                            <li class="list-group-item bg-secondary text-white">İstifadəçi adı:
+                                <strong>firuza@narmishfood.az</strong></li>
+                            <li class="list-group-item bg-secondary text-white">Menu: <strong>IF</strong></li>
+                            <li class="list-group-item bg-secondary text-white">Cari Status: <strong>Active</strong>
+                            </li>
+                        </ul>
+
+                        <!-- Buttons -->
+                        <div class="d-flex justify-content-between">
+                            <a href="../index.html" class="btn btn-outline-secondary btn-shadow">
+                                <i class="fas fa-times me-1"></i> Ləğv et
+                            </a>
+                          <a href="admin.html" class="btn btn-outline-danger btn-shadow">
+                                <i class="fas fa-times me-1"></i> Deaktiv et
+                            </a>
                         </div>
-                    </div>
-                    <div class="row">
                     </div>
                 </div>
             </main>
@@ -128,11 +145,31 @@
         </div>
     </div>
     <!-- Bootstrap core JS-->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
-        crossorigin="anonymous"></script>
-    <script src="assets/js/scripts.js"></script>
-    <!-- Core theme JS-->
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <!-- jQuery (required) -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
+    <!-- Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+
+    <!-- DataTables JS -->
+    <script src="https://cdn.datatables.net/1.13.6/js/jquery.dataTables.min.js"></script>
+    <script src="https://cdn.datatables.net/1.13.6/js/dataTables.bootstrap5.min.js"></script>
+
+    <!-- DataTables Buttons core -->
+    <script src="https://cdn.datatables.net/buttons/2.4.1/js/dataTables.buttons.min.js"></script>
+    <script src="https://cdn.datatables.net/buttons/2.4.1/js/buttons.bootstrap5.min.js"></script>
+
+    <!-- PDF / Excel dependencies MUST come BEFORE buttons.html5 -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.2.7/pdfmake.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.2.7/vfs_fonts.js"></script>
+
+    <!-- DataTables HTML5 buttons -->
+    <script src="https://cdn.datatables.net/buttons/2.4.1/js/buttons.html5.min.js"></script>
+    <script src="https://cdn.datatables.net/buttons/2.4.1/js/buttons.print.min.js"></script>
+
+    <!-- Your Admin JS -->
+    <script src="../assets/js/admin.js"></script>
 </body>
 
 </html>
