--- a/adminPanel/login.html
+++ b/adminPanel/login.html
@@ -40,9 +40,9 @@
                                         </div>
 
                                         <div class="d-grid">
-                                            <button class="btn btn-success btn-lg rounded-pill" type="submit">
+                                            <a href="index.html" class="btn btn-success btn-lg rounded-pill">
                                                 Daxil ol
-                                            </button>
+                                            </a>
                                         </div>
                                     </form>
                                 </div>
